# GamePhysics

./: CMakeLists.txt
src/: main.cpp
src/core/: Application.cpp  Application.h  CMakeLists.txt  Colors.h  Draw.cpp  Draw.h  Math.cpp  Math.h  PhysicsUtils.cpp  PhysicsUtils.h  Preferences.cpp  Preferences.h  Random.cpp  Random.h  Scene.h  Simple2DScene.cpp  Simple2DScene.h
src/objects/: Circle.cpp  Circle.h  Halfspace.cpp  Halfspace.h
src/scenes/: FireworksScene.cpp  FireworksScene.h  HalfspaceCollisionScene.cpp  HalfspaceCollisionScene.h  TestScene.cpp  TestScene.h
